using System.Collections;
using System.Collections.Generic;
using UnityEngine;


    public class AnimationTags
    {
        public const string IDLE_PARAMETER = "Idle";
        public const string WALK_PARAMETER = "Walk";
        public const string CHASE_PARAMETER = "Chase";
        public const string MELEE_TRIGGER = "Attack";
        public const string DEATH_TRIGGER = "Death";

    }

    public class Tags
    {
        public const string PLAYER_TAG = "Player";
        public const string ENEMY_TAG = "Enemy";
        public const string NPC_TAG = "Npc";
    }

